# mcp-studio-migration-deep-agent

./: .env.example  .gitignore  BEFORE_AFTER_COMPARISON.md  COMPREHENSIVE_ERROR_HANDLING.md  CURRENT_STATUS.md  DEEP_AGENTS_GUIDE.md  DEEP_AGENT_TOOL_SELECTION_GAP_ANALYSIS.md  DEEP_AGENT_TOOL_TRACKING_FIX.md  DETAILED_LOGGING_ADDED.md  ERROR_HANDLING_IMPLEMENTATION.md  FINAL_REPORT.md  FIXES_APPLIED.md  GIBBERISH_FIX_SUMMARY.md  GUARDRAILS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LANGSMITH_STUDIO_GUIDE.md  MAJOR_FIXES_APPLIED.md  MCP_ALL_CLEAR.md  MIGRATION_COMPLETE.md  MIGRATION_MARATHON_SUMMARY.md  MIGRATION_SUMMARY.md  PROJECT_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START.md  RATE_LIMIT_FIX.md  README.md  REST_API_FALLBACK.md  ROOT_CAUSE_ANALYSIS.py  ROOT_CAUSE_ANALYSIS_COMPLETE.md  ROOT_CAUSE_FOUND.md  TESTING_AND_VALIDATION.md  TEST_CASE_BUG_FIX.md  TEST_GITHUB_INTEGRATION.md  TOOL_SELECTION_IMPROVEMENTS_SUMMARY.md  VALIDATION_REPORT.md  VISUAL_OVERVIEW.md  check_ado_direct.py  check_ado_state.py  check_ado_status.py  check_ado_via_cli.py  (+68 more)
.github/: copilot-instructions.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
docs/: architecture_and_design.md  deep_agents_migration.md  northern_trust_standards.md
docs/diagrams/: architecture_fin-demo01182026-1_20260118_171404.md  architecture_fin-demo01182026-2_20260118_173331.md  architecture_fin-demo01182026-3_20260118_174122.md  architecture_fin-demo01182026-4_20260118_175414.md  architecture_fin-demo01192026-da-14_20260119_233855.md  architecture_fin-demo01192026-da-1_20260120_000953.md  diagram_fin-demo01182026-1_20260118_171404_1.mmd  (+9 more)
scripts/: clear_langsmith_traces.py  create_sample_work_items.py  create_test_case_direct.py  create_test_plan_direct.py  delete_all_work_items.py  mcp_mermaid_stdio_wrapper.mjs  populate_test_plan_from_work_items.py  reset_studio_thread.sh  test_ado_plan_suite_case.py  test_create_test_cases.py
src/: config.py  main.py  studio_graph.py  studio_graph_agentic.py  studio_graph_autonomous.py  studio_graph_deep.py
tests/: test_agents.py  test_deep_agents.py  test_integration.py  test_main.py  test_mcp_client.py  test_observability.py  test_sdlc_agents.py
(+18 files in other folders)
